force-app/main/default/objects/Contact/fields/OtherInterest__c.field-meta.xml
<CustomField>
    <fullName>OtherInterest__c</fullName>
    <description>Other Interest</description>
    <label>Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>