force-app/main/default/objects/Contact/fields/ParallelMarket_Status__c.field-meta.xml
<CustomField>
    <fullName>ParallelMarket_Status__c</fullName>
    <description>Parralel Market status. Updated by EAI only from Denodo tool.</description>
    <label>Parallel Market Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>