force-app/main/default/objects/Contact/fields/ParallelMarket_StatusDate__c.field-meta.xml
<CustomField>
    <fullName>ParallelMarket_StatusDate__c</fullName>
    <description>Parallel Market last update date.
Based on the update of ParallelMarket_Status</description>
    <label>Parallel Market Status Date</label>
    <type>DateTime</type>
</CustomField>