force-app/main/default/objects/Contact/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <externalId>true</externalId>
    <label>Passport #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>