force-app/main/default/objects/Contact/fields/PerfumesInterest__c.field-meta.xml
<CustomField>
    <fullName>PerfumesInterest__c</fullName>
    <description>Perfumes Interest</description>
    <label>Perfumes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>