force-app/main/default/objects/Contact/fields/PersonalInterest2__c.field-meta.xml
<CustomField>
    <fullName>PersonalInterest2__c</fullName>
    <label>Personal Interest 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Art &amp; Design</fullName>
            </value>
            <value>
                <fullName>Cars</fullName>
            </value>
            <value>
                <fullName>Charities</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Classic Cars</fullName>
            </value>
            <value>
                <fullName>Gastronomy</fullName>
            </value>
            <value>
                <fullName>Antique Collector</fullName>
            </value>
            <value>
                <fullName>In-Store Events</fullName>
            </value>
            <value>
                <fullName>Jewelry Collector</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Watch Collector</fullName>
            </value>
            <value>
                <fullName>Wines</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Health &amp; Fitness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>