force-app/main/default/objects/Contact/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <label>Preferred language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAR</fullName>
            </value>
            <value>
                <fullName>ABK</fullName>
            </value>
            <value>
                <fullName>AFR</fullName>
            </value>
            <value>
                <fullName>AKA</fullName>
            </value>
            <value>
                <fullName>AMH</fullName>
            </value>
            <value>
                <fullName>ARA</fullName>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>AVA</fullName>
            </value>
            <value>
                <fullName>AVE</fullName>
            </value>
            <value>
                <fullName>AYM</fullName>
            </value>
            <value>
                <fullName>AZE</fullName>
            </value>
            <value>
                <fullName>BAK</fullName>
            </value>
            <value>
                <fullName>BAM</fullName>
            </value>
            <value>
                <fullName>BEL</fullName>
            </value>
            <value>
                <fullName>BEN</fullName>
            </value>
            <value>
                <fullName>BIH</fullName>
            </value>
            <value>
                <fullName>BIS</fullName>
            </value>
            <value>
                <fullName>BOD</fullName>
            </value>
            <value>
                <fullName>BOS</fullName>
            </value>
            <value>
                <fullName>BRE</fullName>
            </value>
            <value>
                <fullName>BUL</fullName>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>CES</fullName>
            </value>
            <value>
                <fullName>CHA</fullName>
            </value>
            <value>
                <fullName>CHE</fullName>
            </value>
            <value>
                <fullName>CHU</fullName>
            </value>
            <value>
                <fullName>CHV</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>