force-app/main/default/objects/Contact/fields/PrimaryAddress__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddress__c</fullName>
    <formula>IF(
!ISBLANK(PrimaryAddressLine1__c), 
PrimaryAddressLine1__c &amp; BR(), 
&quot;&quot;)
&amp;
IF(
!ISBLANK(PrimaryAddressLine2__c), 
PrimaryAddressLine2__c &amp; BR(), 
&quot;&quot;)
&amp;
IF(
!ISBLANK(PrimaryAddressLine3__c), 
PrimaryAddressLine3__c &amp; BR(), 
&quot;&quot;)
&amp;
IF(
(!ISBLANK(PrimaryCity__c)&amp;&amp; !ISBLANK(PrimaryZipCode__c)), 
PrimaryCity__c &amp;&quot;, &quot; &amp; PrimaryZipCode__c &amp; BR(), 
IF(
(ISBLANK(PrimaryCity__c)&amp;&amp; !ISBLANK(PrimaryZipCode__c)) , 
PrimaryZipCode__c &amp; BR(), 
IF(
(!ISBLANK(PrimaryCity__c)&amp;&amp; ISBLANK(PrimaryZipCode__c)) , 
PrimaryCity__c &amp; BR(), 
&quot;&quot;)))
&amp;
IF(
!ISBLANK(PrimaryStateProvince__c), 
PrimaryStateProvince__c &amp; BR(), 
&quot;&quot;)
&amp;
IF(
!ISBLANK(PrimaryCountry__c), 
PrimaryCountry__c &amp; BR(), 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Address</label>
    <type>Text</type>
</CustomField>