force-app/main/default/objects/Contact/fields/PrimaryAddressCompacted__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddressCompacted__c</fullName>
    <description>Complete address in one line</description>
    <formula>IF(
  !ISBLANK(PrimaryAddressLine1__c), 
  PrimaryAddressLine1__c &amp; &apos;, &apos;, 
  &quot;&quot;
)
&amp;
IF(
  !ISBLANK(PrimaryAddressLine2__c), 
  PrimaryAddressLine2__c &amp; &apos;, &apos;, 
  &quot;&quot;
)
&amp;
IF(
  !ISBLANK(PrimaryAddressLine3__c), 
  PrimaryAddressLine3__c &amp; &apos;, &apos;, 
  &quot;&quot;
)
&amp;
IF(
  (!ISBLANK(PrimaryCity__c)&amp;&amp; !ISBLANK(PrimaryZipCode__c)), 
  PrimaryCity__c &amp;&quot;, &quot; &amp; PrimaryZipCode__c &amp; &apos;, &apos;, 

  IF(
    (ISBLANK(PrimaryCity__c)&amp;&amp; !ISBLANK(PrimaryZipCode__c)) , 
    PrimaryZipCode__c &amp; &apos;, &apos;, 

    IF(
      (!ISBLANK(PrimaryCity__c)&amp;&amp; ISBLANK(PrimaryZipCode__c)) , 
      PrimaryCity__c &amp; &apos;, &apos;, 
      &quot;&quot;
    )
  )
)
&amp;
IF(
  !ISBLANK(PrimaryStateProvince__c), 
  PrimaryStateProvince__c &amp; &apos;, &apos;, 
  &quot;&quot;
)
&amp;
IF(
  !ISBLANK(PrimaryCountry__c), 
  PrimaryCountry__c, 
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Address Compacted</label>
    <type>Text</type>
</CustomField>