force-app/main/default/objects/Contact/fields/PrimaryAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddressLine1__c</fullName>
    <label>Address Line 1</label>
    <length>90</length>
    <type>Text</type>
</CustomField>