force-app/main/default/objects/Contact/fields/PrimaryAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddressLine2__c</fullName>
    <label>Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>