force-app/main/default/objects/Contact/fields/PrimaryAddressLine3__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddressLine3__c</fullName>
    <label>Address Line 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>