force-app/main/default/objects/Contact/fields/PrimaryCity__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCity__c</fullName>
    <label>Town/City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>