force-app/main/default/objects/Contact/fields/PrimaryStateProvince__c.field-meta.xml
<CustomField>
    <fullName>PrimaryStateProvince__c</fullName>
    <label>Province/State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>