force-app/main/default/objects/Contact/fields/PrimaryZipCode__c.field-meta.xml
<CustomField>
    <fullName>PrimaryZipCode__c</fullName>
    <label>Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>