force-app/main/default/objects/Contact/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Product Interest</label>
    <length>80</length>
    <type>Text</type>
</CustomField>