force-app/main/default/objects/Contact/fields/ProductRecommendation__c.field-meta.xml
<CustomField>
    <fullName>ProductRecommendation__c</fullName>
    <description>list of recomeneded SKUs</description>
    <label>ProductRecommendation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>