force-app/main/default/objects/Contact/fields/PropensityScore__c.field-meta.xml
<CustomField>
    <fullName>PropensityScore__c</fullName>
    <label>PropensityScore</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>