force-app/main/default/objects/Contact/fields/QtePurchaseCapucines12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchaseCapucines12mr__c</fullName>
    <label>QtePurchaseCapucines12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>