force-app/main/default/objects/Contact/fields/QtePurchased12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchased12mr__c</fullName>
    <label>QtePurchased12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>