force-app/main/default/objects/Contact/fields/QtePurchasedACC12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedACC12mr__c</fullName>
    <label>QtePurchasedACC12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>