force-app/main/default/objects/Contact/fields/QtePurchasedBag12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedBag12mr__c</fullName>
    <label>QtePurchasedBag12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>