force-app/main/default/objects/Contact/fields/QtePurchasedExotics12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedExotics12mr__c</fullName>
    <label>QtePurchasedExotics12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>