force-app/main/default/objects/Contact/fields/QtePurchasedJEW12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedJEW12mr__c</fullName>
    <label>QtePurchasedJEW12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>