force-app/main/default/objects/Contact/fields/QtePurchasedLG12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedLG12mr__c</fullName>
    <label>QtePurchasedLG12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>