force-app/main/default/objects/Contact/fields/QtePurchasedMenRtw12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedMenRtw12mr__c</fullName>
    <label>QtePurchasedMenRtw12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>