force-app/main/default/objects/Contact/fields/QtePurchasedMenShoe12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedMenShoe12mr__c</fullName>
    <label>QtePurchasedMenShoe12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>