force-app/main/default/objects/Contact/fields/QtePurchasedObjNomadeHardsided12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedObjNomadeHardsided12mr__c</fullName>
    <label>QtePurchasedObjNomadeHardsided12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>