force-app/main/default/objects/Contact/fields/QtePurchasedPFM12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedPFM12mr__c</fullName>
    <label>QtePurchasedPFM12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>