force-app/main/default/objects/Contact/fields/QtePurchasedRTW12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedRTW12mr__c</fullName>
    <label>QtePurchasedRTW12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>