force-app/main/default/objects/Contact/fields/QtePurchasedSHOE12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedSHOE12mr__c</fullName>
    <label>QtePurchasedSHOE12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>