force-app/main/default/objects/Contact/fields/QtePurchasedTravel12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedTravel12mr__c</fullName>
    <label>QtePurchasedTravel12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>