force-app/main/default/objects/Contact/fields/QtePurchasedWAT12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedWAT12mr__c</fullName>
    <label>QtePurchasedWAT12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>