force-app/main/default/objects/Contact/fields/QtePurchasedWatchJewelry12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedWatchJewelry12mr__c</fullName>
    <label>QtePurchasedWatchJewelry12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>