force-app/main/default/objects/Contact/fields/QtePurchasedWomenRtw12mr__c.field-meta.xml
<CustomField>
    <fullName>QtePurchasedWomenRtw12mr__c</fullName>
    <label>QtePurchasedWomenRtw12mr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>