force-app/main/default/objects/Contact/fields/RecoveryAct__c.field-meta.xml
<CustomField>
    <fullName>RecoveryAct__c</fullName>
    <label>Recovery Act</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>