force-app/main/default/objects/Contact/fields/REP_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>REP_Birthdate__c</fullName>
    <formula>Birthdate</formula>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>