force-app/main/default/objects/Contact/fields/RMSId__c.field-meta.xml
<CustomField>
    <fullName>RMSId__c</fullName>
    <label>RMS Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>