force-app/main/default/objects/Contact/fields/RTWInterest__c.field-meta.xml
<CustomField>
    <fullName>RTWInterest__c</fullName>
    <description>RTW Interest</description>
    <label>RTW</label>
    <length>80</length>
    <type>Text</type>
</CustomField>