force-app/main/default/objects/Contact/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIC</fullName>
                <color>#66E9BD</color>
                <label>VIC</label>
            </value>
            <value>
                <fullName>The Family</fullName>
                <color>#A53711</color>
                <label>The Family</label>
            </value>
            <value>
                <fullName>Adventurers</fullName>
                <color>#E27001</color>
                <label>Adventurers</label>
            </value>
            <value>
                <fullName>Core clients</fullName>
                <color>#F3D904</color>
                <label>Core clients</label>
            </value>
            <value>
                <fullName>Emerging</fullName>
                <color>#A845DC</color>
                <label>Emerging</label>
            </value>
            <value>
                <fullName>Novices</fullName>
                <color>#78C953</color>
                <label>Novices</label>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Sleepers</fullName>
                <color>#FF0000</color>
                <label>Sleepers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>