force-app/main/default/objects/Contact/fields/ServiceInterest__c.field-meta.xml
<CustomField>
    <fullName>ServiceInterest__c</fullName>
    <label>Service</label>
    <length>80</length>
    <type>Text</type>
</CustomField>